--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1122,7 +1122,7 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-  background-color: #ea0622;
+  background-color: #052310;
   border-radius: 4px;
   border: 0;
   box-shadow: inset 0 0 0 1px #ffffff;
